add technologies used

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </p>
             <hr class="line">
             <p class="skills text-center">My Skills Include:
-              <ul>
+              <ul class="skills">
                 <li>React</li>
                 <li>Express</li>
                 <li>PostgreSQL</li>
@@ -153,9 +153,13 @@
               <figure class="cap-bot">
                 <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
                 <figcaption class="work-caption">
-                  <p>Simon:</p>
-                  <a href="https://codepen.io/mimi13/full/RovPjb/" target="_blank" class="work-label">Play Simon!</a><br>
-                  <a href="https://github.com/mimi26/Simon" target="_blank" class="work-label">Github</a>
+                  <p class="text-center">Technologies Used:</p>
+                    <ul class="work-caption tech-list text-center">
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>JavaScript</li>
+                      <li>JQuery</li>
+                    </ul>
                 </figcaption>
               </figure>
                <div class="links">
@@ -171,9 +175,15 @@
               <figure class="cap-bot">
                 <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
                 <figcaption class="work-caption">
-                  <p>Scheduler:</p>
-                  <a href="http://scheduler.bitballoon.com/" target="_blank" class="work-label">Live</a><br>
-                  <a href="https://github.com/mimi26/CalendarApp/tree/master/CalendarApp" target="_blank" class="work-label">Github</a>
+                  <p class="text-center">Technologies Used:</p>
+                    <ul class="work-caption tech-list text-center">
+                      <li>React/React Router</li>
+                      <li>Express</li>
+                      <li>PostgreSQL</li>
+                      <li>JavaScript</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
                 </figcaption>
               </figure>
               <div class="links">
@@ -191,9 +201,14 @@
               <figure class="cap-bot">
                 <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
                 <figcaption class="work-caption">
-                  <p>Tech.ie:</p>
-                  Live<br>
-                  Github
+                  <p class="text-center">Technologies Used:</p>
+                    <ul class="work-caption tech-list text-center">
+                      <li>Express</li>
+                      <li>PostgreSQL</li>
+                      <li>JavaScript</li>
+                      <li>HTML</li>
+                      <li>Sass</li>
+                    </ul>
                 </figcaption>
               </figure>
               <div class="links">
@@ -209,9 +224,14 @@
               <figure class="cap-bot">
                 <img class="work-img" src="images/skycast.png" alt="screen shot of weather app">
                 <figcaption class="work-caption">
-                  <p>Weather App:</p>
-                  <a href="https://skycastdarksky.herokuapp.com/" target="_blank" class="work-label">Live</a><br>
-                  <a href="https://github.com/mimi26/skycast" target="_blank" class="work-label">Github</a>
+                  <p class="text-center">Technologies Used:</p>
+                    <ul class="work-caption tech-list text-center">
+                      <li>Express</li>
+                      <li>PostgreSQL</li>
+                      <li>Google Map API</li>
+                      <li>Dark Sky Weather API</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
                 </figcaption>
               </figure>
               <div class="links">
