--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                   <p class="link">Live</p>
                 </a>
                 <a href="https://github.com/mimi26/skycast" target="_blank" class="work-label">
-                  <p class="link">Github</p>
+                  <p class="link github">Github</p>
                 </a>
               </div>
             </div>
