adjust top margin

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
         <h1 class="web-dev">Web Developer</h1>
         <nav>
-          <div class="mimi_klein">
+          <div class="mimi-klein">
             <div class="about">
               <a href="#aboutme" class="smoothScroll">about</a>
             </div>
