--- a/index.html
+++ b/index.html
@@ -36,11 +36,15 @@
         </div><!--end name div-->
         <div class="biography" id="aboutme">
           <div class="bio">
-            <h1 class="header">Hi! I'm Mimi. </h1>
+            <h1 class="header hi">Hi! I'm Mimi. </h1>
             <p>
-     I live in Brooklyn, NY with my cat Mutty. I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
+      I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
+            </p>
+            <p>
 
-    I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
+I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
+ I live in Brooklyn, NY with my cat Mutty.
+
             </p>
             <hr class="line">
             <p class="skills text-center">My Skills Include:
