--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
           <div class="bio">
             <h1 class="header hi">Hi! I'm Mimi. </h1>
             <p>
-      I worked as an Ophthalmic Photographer for the last 10 years. Now I'm excited to start a whole new journey contributing to making the web a more interesting, open and accessible place as a Web Developer.
+     I'm a Web Developer with a mission to contribute to projects that matter. For the last ten years I was an Ophthalmic Photographer. Now I'm on a journey to help make the web more interesting, open and accessible.
+
             </p>
             <p>
 
-I'm a fire performer; I spin poi and fire fans, and recently started eating fire. I like to knit, and I dabble in aerial silks. I sing and play guitar, and occasionally I like to ferment things. I have 6 nieces and nephews, and greatly enjoy playing the role of crazy aunt.
- I live in Brooklyn, NY with my cat Mutty.
+I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to knit, fly through the air on aerial silks, sing, play guitar, and ferment foods. I have 6 nieces and nephews and live in Brooklyn, NY with my cat Mutty.
 
             </p>
             <hr class="line">
@@ -108,7 +108,7 @@ I'm a fire performer; I spin poi and fire fans, and recently started eating fire
                 <td>
                   <figure class="cap">
                       <img class="img-grid" src="images/crazyaunt.jpg" alt="A adult woman and young girl both sticking their tongues out">
-                        <figcaption>crazy aunt-ing <br />with Ella</figcaption>
+                        <figcaption>Being silly with<br /> my neice Ella</figcaption>
                     </figure>
                 </td>
                 <td><figure class="cap">
@@ -126,7 +126,7 @@ I'm a fire performer; I spin poi and fire fans, and recently started eating fire
                 <td>
                   <figure class="cap">
                       <img class="img-grid" src="images/angiogram.jpg" alt="Medical image of a retinal dye test">
-                        <figcaption>fluorescein test</figcaption>
+                        <figcaption>retina with fluorescein dye</figcaption>
                     </figure>
                 </td>
                 <td><figure class="cap">
