--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="bio">
             <h1 class="header hi">Hi! I'm Mimi. </h1>
             <p>
-     I'm a Web Developer with a mission to contribute to projects that matter. For the last ten years I was an Ophthalmic Photographer. Now I'm on a journey to help make the web more interesting, open and accessible.
+     I'm a Web Developer with a mission to contribute to projects that matter. Prior to this, I worked as an Ophthalmic Photographer for ten years. Now I'm on a journey to help make the web more interesting, open and accessible.
 
             </p>
             <p>
