add background url

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </head>
     <body>
       <div class="container-fluid">
+      <div class="code"></div>
         <div class="name">
           <div class="name-header">
             <h1 class="mimi header">Mimi</h1>
@@ -108,7 +109,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 <td>
                   <figure class="cap">
                       <img class="img-grid" src="images/crazyaunt.jpg" alt="A adult woman and young girl both sticking their tongues out">
-                        <figcaption>Being silly with<br /> my neice Ella</figcaption>
+                        <figcaption>being silly with<br /> my neice Ella</figcaption>
                     </figure>
                 </td>
                 <td><figure class="cap">
