remove background url

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
       <div class="container-fluid">
-      <div class="code"></div>
+      <!-- <div class="code"></div> -->
         <div class="name">
           <div class="name-header">
             <h1 class="mimi header">Mimi</h1>
