add background to work section

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link href="https://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Fredericka+the+Great|Quicksand|Mate+SC|Josefin+Sans|Architects+Daughter" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Marcellus+SC|Alegreya+Sans+SC|Fredericka+the+Great|Quicksand|Mate+SC|Josefin+Sans|Architects+Daughter" rel="stylesheet">
       <title>Mimi Klein</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,7 +13,7 @@
     </head>
     <body>
       <div class="container-fluid">
-      <div class="code"></div>
+      <div class="code-landing"></div>
         <div class="name">
           <div class="name-header">
             <h1 class="mimi header">Mimi</h1>
@@ -27,7 +27,7 @@
               <a href="#aboutme" class="smoothScroll">about</a>
             </div>
             <div class="portfolio-link">
-              <a href="#portfolio" class="smoothScroll">work</a>
+              <a href="#portfolio" class="smoothScroll">portfolio</a>
             </div>
             <div class="contact">
               <a href="#contact" class="smoothScroll">contact</a>
@@ -78,7 +78,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 </td>
                 <td><figure class="cap">
                       <img class="img-grid" src="images/eatfire.jpg" alt="A woman eating fire">
-                        <figcaption>as scary as it looks</figcaption>
+                        <figcaption>as scary as <br>it looks</figcaption>
                     </figure>
                 </td>
               </tr>
@@ -109,12 +109,12 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 <td>
                   <figure class="cap">
                       <img class="img-grid" src="images/crazyaunt.jpg" alt="A adult woman and young girl both sticking their tongues out">
-                        <figcaption>being silly with<br /> my neice Ella</figcaption>
+                        <figcaption>being silly with<br> my neice Ella</figcaption>
                     </figure>
                 </td>
                 <td><figure class="cap">
                       <img class="img-grid" src="images/dragon.jpg" alt="A woman sitting on a large white dragon statue">
-                        <figcaption>just another boring <br>day of dragon flying <br>at burning man '15</figcaption>
+                        <figcaption>just another <br>boring day<br> of dragon <br>flying at<br> burning man '15</figcaption>
                     </figure>
                 </td>
               </tr>
@@ -127,12 +127,12 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 <td>
                   <figure class="cap">
                       <img class="img-grid" src="images/angiogram.jpg" alt="Medical image of a retinal dye test">
-                        <figcaption>retina with fluorescein dye</figcaption>
+                        <figcaption>retina with <br>fluorescein dye</figcaption>
                     </figure>
                 </td>
                 <td><figure class="cap">
                       <img class="img-grid" src="images/muttylap.jpg" alt="A cat sitting on a laptop keyboard on a person's lap">
-                        <figcaption>Mutty likes to help</figcaption>
+                        <figcaption>Mutty likes <br />to help</figcaption>
                     </figure>
                 </td>
               </tr>
@@ -141,16 +141,16 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
         </div><!--end biography div-->
         <a href="#portfolio" class="smoothScroll">
           <div class="next-section  work-section text-center">
-            <p class="next-label">work</p>
+            <p class="next-label">portfolio</p>
             <span class="fa-stack fa-lg">
               <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
             </span>
           </div>
         </a>
-
+      <div class="code-work"></div>
         <div class="portfolio" id="portfolio">
           <div class="row">
-            <h1 class="header col-md-12">Work</h1>
+            <h1 class="header col-md-12">Portfolio</h1>
           </div>
           <div class="tap">Tap on Images below</div>
           <div class ="row work-container">
