--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
       <div class="container-fluid">
-      <div class="code-landing"></div>
+      <div class="code-landing">
         <div class="name">
           <div class="name-header">
             <h1 class="mimi header">Mimi</h1>
@@ -35,6 +35,8 @@
           </div>
         </nav>
         </div><!--end name div-->
+      </div>
+
         <div class="biography" id="aboutme">
           <div class="bio">
             <h1 class="header hi">Hi! I'm Mimi. </h1>
@@ -147,7 +149,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
             </span>
           </div>
         </a>
-      <div class="code-work"></div>
+      <div class="code-work">
         <div class="portfolio" id="portfolio">
           <div class="row">
             <h1 class="header col-md-12">Portfolio</h1>
@@ -250,6 +252,8 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
             </div>
           </div>
         </div><!--end portfolio-->
+      </div>
+
 
         <a href="#contact" class="smoothScroll">
           <div class="next-section  text-center">
