--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
           <div class="row">
             <h1 class="header col-md-12">Portfolio</h1>
           </div>
-          <div class="tap">Tap on Images below</div>
+          <div class="tap">(tap on images below)</div>
           <div class ="row work-container">
             <div class="work-links top-work col-md-6">
               <figure class="cap-bot">
