--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
 
             </p>
             <hr class="line">
-            <p class="skills text-center">My Skills Include:
+            <p class="skills">My Skills Include:
               <ul class="skills">
                 <li>React</li>
                 <li>Express</li>
@@ -160,7 +160,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
               <figure class="cap-bot">
                 <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
                 <figcaption class="work-caption">
-                  <p class="text-center">Technologies Used:</p>
+                  <p class="techs-used text-center">Technologies Used:</p>
                     <ul class="work-caption tech-list text-center">
                       <li>HTML</li>
                       <li>CSS</li>
@@ -182,7 +182,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
               <figure class="cap-bot">
                 <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
                 <figcaption class="work-caption">
-                  <p class="text-center">Technologies Used:</p>
+                  <p class="techs-used text-center">Technologies Used:</p>
                     <ul class="work-caption tech-list text-center">
                       <li>React/React Router</li>
                       <li>Express</li>
@@ -208,7 +208,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
               <figure class="cap-bot">
                 <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
                 <figcaption class="work-caption">
-                  <p class="text-center">Technologies Used:</p>
+                  <p class="techs-used text-center">Technologies Used:</p>
                     <ul class="work-caption tech-list text-center">
                       <li>Express</li>
                       <li>PostgreSQL</li>
@@ -231,7 +231,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
               <figure class="cap-bot">
                 <img class="work-img" src="images/skycast.png" alt="screen shot of weather app">
                 <figcaption class="work-caption">
-                  <p class="text-center">Technologies Used:</p>
+                  <p class="techs-used text-center">Technologies Used:</p>
                     <ul class="work-caption tech-list text-center">
                       <li>Express</li>
                       <li>PostgreSQL</li>
@@ -257,7 +257,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
 
         <a href="#contact" class="smoothScroll">
           <div class="next-section  text-center">
-            <p class="next-label">contact</p>
+            <p class="next-label next-contact">contact</p>
             <span class="fa-stack fa-lg">
               <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
             </span>
