--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
       <div class="code-work">
         <div class="portfolio" id="portfolio">
           <div class="row">
-            <h1 class="header col-md-12">Portfolio</h1>
+            <h1 class="header portfolio-header col-md-12">Portfolio</h1>
           </div>
           <div class="tap">(tap on images below)</div>
           <div class ="row work-container">
