changed simon link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 </figcaption>
               </figure>
                <div class="links">
-                <a href="https://codepen.io/mimi13/full/RovPjb/" class="work-label" target="_blank">
+                <a href="http://simongamemimi.bitballoon.com/" class="work-label" target="_blank">
                   <p class="link">Live</p>
                 </a>
                 <a href="https://github.com/mimi26/Simon" target="_blank" class="work-label">
