change techie link

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 <a href="https://techie-micdrop.herokuapp.com/" class="work-label" target="_blank">
                   <p class="link">Live</p>
                 </a>
-                <a href="https://github.com/mattkersner/techie" target="_blank" class="work-label">
+                <a href="https://github.com/mimi26/techie" target="_blank" class="work-label">
                   <p class="link">Github</p>
                 </a>
               </div>
