fixed cross-broser alignment issue on mobile

--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
 
 
         <a href="#contact" class="smoothScroll">
-          <div class="next-section  text-center">
-            <p class="next-label next-contact">contact</p>
+          <div class="next-section  text-center next-contact">
+            <p class="next-label">contact</p>
             <span class="fa-stack fa-lg">
               <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
             </span>
