--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 </figcaption>
               </figure>
               <div class="links">
-                <a href="http://scheduler.bitballoon.com/" class="work-label" target="_blank">
+                <a href="https://eventschedulerapp.herokuapp.com/login" class="work-label" target="_blank">
                   <p class="link">Live</p>
                 </a>
-                <a href="https://github.com/mimi26/CalendarApp/tree/master/CalendarApp" target="_blank" class="work-label">
+                <a href="https://github.com/mimi26/NewCalendarApp" target="_blank" class="work-label">
                   <p class="link">Github</p>
                 </a>
               </div>
