switch simon game in portfolio to react version

--- a/index.html
+++ b/index.html
@@ -162,18 +162,18 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                 <figcaption class="work-caption">
                   <p class="techs-used text-center">Technologies Used:</p>
                     <ul class="work-caption tech-list text-center">
+                      <li>React</li>
+                      <li>JavaScript</li>
                       <li>HTML</li>
                       <li>CSS</li>
-                      <li>JavaScript</li>
-                      <li>JQuery</li>
                     </ul>
                 </figcaption>
               </figure>
                <div class="links">
-                <a href="http://simongamemimi.bitballoon.com/" class="work-label" target="_blank">
+                <a href="http://simonreact.bitballoon.com/" class="work-label" target="_blank">
                   <p class="link">Live</p>
                 </a>
-                <a href="https://github.com/mimi26/Simon" target="_blank" class="work-label">
+                <a href="https://github.com/mimi26/simon-react" target="_blank" class="work-label">
                   <p class="link">Github</p>
                 </a>
               </div>
