change photo of me

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="name">
           <div class="name-header">
             <h1 class="mimi header">Mimi</h1>
-            <img class="center-block about-me" src="images/me.jpg" alt="image of Mimi Klein">
+            <img class="center-block about-me" src="images/mecropped.jpg" alt="image of Mimi Klein">
             <h1 class="klein header">Klein</h1>
           </div>
         <h1 class="web-dev">Web Developer</h1>
