fix alignment on larger screens

--- a/index.html
+++ b/index.html
@@ -154,100 +154,102 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
           <div class="row">
             <h1 class="header portfolio-header col-md-12">Portfolio</h1>
           </div>
-          <div class="tap">(tap on images below)</div>
-          <div class ="row work-container">
-            <div class="work-links top-work col-md-6">
-              <figure class="cap-bot">
-                <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
-                <figcaption class="work-caption">
-                  <p class="techs-used text-center">Technologies Used:</p>
-                    <ul class="work-caption tech-list text-center">
-                      <li>React</li>
-                      <li>JavaScript</li>
-                      <li>HTML</li>
-                      <li>CSS</li>
-                    </ul>
-                </figcaption>
-              </figure>
-               <div class="links">
-                <a href="http://simonreact.bitballoon.com/" class="work-label" target="_blank">
-                  <p class="link">Live</p>
-                </a>
-                <a href="https://github.com/mimi26/simon-react" target="_blank" class="work-label">
-                  <p class="link">Github</p>
-                </a>
+          <div class="portfolio-container">
+            <div class="tap">(tap on images below)</div>
+            <div class ="row work-container work-top-row">
+              <div class="work-links top-work col-md-6">
+                <figure class="cap-bot">
+                  <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
+                  <figcaption class="work-caption">
+                    <p class="techs-used text-center">Technologies Used:</p>
+                      <ul class="work-caption tech-list text-center">
+                        <li>React</li>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                      </ul>
+                  </figcaption>
+                </figure>
+                <div class="links">
+                  <a href="http://simonreact.bitballoon.com/" class="work-label" target="_blank">
+                    <p class="link">Live</p>
+                  </a>
+                  <a href="https://github.com/mimi26/simon-react" target="_blank" class="work-label">
+                    <p class="link">Github</p>
+                  </a>
+                </div>
+              </div>
+              <div class="work-links top-work col-md-6">
+                <figure class="cap-bot">
+                  <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
+                  <figcaption class="work-caption">
+                    <p class="techs-used text-center">Technologies Used:</p>
+                      <ul class="work-caption tech-list text-center">
+                        <li>React/React Router</li>
+                        <li>Express</li>
+                        <li>PostgreSQL</li>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                      </ul>
+                  </figcaption>
+                </figure>
+                <div class="links">
+                  <a href="https://eventschedulerapp.herokuapp.com/login" class="work-label" target="_blank">
+                    <p class="link">Live</p>
+                  </a>
+                  <a href="https://github.com/mimi26/NewCalendarApp" target="_blank" class="work-label">
+                    <p class="link">Github</p>
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="work-links top-work col-md-6">
-              <figure class="cap-bot">
-                <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
-                <figcaption class="work-caption">
-                  <p class="techs-used text-center">Technologies Used:</p>
-                    <ul class="work-caption tech-list text-center">
-                      <li>React/React Router</li>
-                      <li>Express</li>
-                      <li>PostgreSQL</li>
-                      <li>JavaScript</li>
-                      <li>HTML</li>
-                      <li>CSS</li>
-                    </ul>
-                </figcaption>
-              </figure>
-              <div class="links">
-                <a href="https://eventschedulerapp.herokuapp.com/login" class="work-label" target="_blank">
-                  <p class="link">Live</p>
-                </a>
-                <a href="https://github.com/mimi26/NewCalendarApp" target="_blank" class="work-label">
-                  <p class="link">Github</p>
-                </a>
+            <div class="row work-container work-bottom-row">
+              <div class="work-links col-md-6">
+                <figure class="cap-bot">
+                  <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
+                  <figcaption class="work-caption">
+                    <p class="techs-used text-center">Technologies Used:</p>
+                      <ul class="work-caption tech-list text-center">
+                        <li>Express</li>
+                        <li>PostgreSQL</li>
+                        <li>JavaScript</li>
+                        <li>HTML</li>
+                        <li>Sass</li>
+                      </ul>
+                  </figcaption>
+                </figure>
+                <div class="links">
+                  <a href="https://techie-micdrop.herokuapp.com/" class="work-label" target="_blank">
+                    <p class="link">Live</p>
+                  </a>
+                  <a href="https://github.com/mimi26/techie" target="_blank" class="work-label">
+                    <p class="link">Github</p>
+                  </a>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="row work-container">
-            <div class="work-links col-md-6">
-              <figure class="cap-bot">
-                <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
-                <figcaption class="work-caption">
-                  <p class="techs-used text-center">Technologies Used:</p>
-                    <ul class="work-caption tech-list text-center">
-                      <li>Express</li>
-                      <li>PostgreSQL</li>
-                      <li>JavaScript</li>
-                      <li>HTML</li>
-                      <li>Sass</li>
-                    </ul>
-                </figcaption>
-              </figure>
-              <div class="links">
-                <a href="https://techie-micdrop.herokuapp.com/" class="work-label" target="_blank">
-                  <p class="link">Live</p>
-                </a>
-                <a href="https://github.com/mimi26/techie" target="_blank" class="work-label">
-                  <p class="link">Github</p>
-                </a>
-              </div>
-            </div>
-            <div class="work-links col-md-6">
-              <figure class="cap-bot">
-                <img class="work-img" src="images/skycast.png" alt="screen shot of weather app">
-                <figcaption class="work-caption">
-                  <p class="techs-used text-center">Technologies Used:</p>
-                    <ul class="work-caption tech-list text-center">
-                      <li>Express</li>
-                      <li>PostgreSQL</li>
-                      <li>Google Map API</li>
-                      <li>Dark Sky Weather API</li>
-                      <li>HTML</li>
-                      <li>CSS</li>
-                </figcaption>
-              </figure>
-              <div class="links">
-                <a href="https://skycastdarksky.herokuapp.com/" class="work-label" target="_blank">
-                  <p class="link">Live</p>
-                </a>
-                <a href="https://github.com/mimi26/skycast" target="_blank" class="work-label">
-                  <p class="link github">Github</p>
-                </a>
+              <div class="work-links col-md-6">
+                <figure class="cap-bot">
+                  <img class="work-img" src="images/skycast.png" alt="screen shot of weather app">
+                  <figcaption class="work-caption">
+                    <p class="techs-used text-center">Technologies Used:</p>
+                      <ul class="work-caption tech-list text-center">
+                        <li>Express</li>
+                        <li>PostgreSQL</li>
+                        <li>Google Map API</li>
+                        <li>Dark Sky Weather API</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                  </figcaption>
+                </figure>
+                <div class="links">
+                  <a href="https://skycastdarksky.herokuapp.com/" class="work-label" target="_blank">
+                    <p class="link">Live</p>
+                  </a>
+                  <a href="https://github.com/mimi26/skycast" target="_blank" class="work-label">
+                    <p class="link github">Github</p>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
