--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
           <div class="tap">(tap on images below)</div>
           <div class="portfolio-container">
             <div class ="row work-container work-top-row">
-              <div class="work-links top-work col-md-6">
+              <div class="work-links top-work col-md-4">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
                   <figcaption class="work-caption">
@@ -179,7 +179,31 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                   </a>
                 </div>
               </div>
-              <div class="work-links top-work col-md-6">
+              <div class="work-links top-work col-md-4">
+                <figure class="cap-bot">
+                  <img class="work-img" src="images/ramen.png" alt="screen shot of simon game">
+                  <figcaption class="work-caption">
+                    <p class="techs-used text-center">Technologies Used:</p>
+                    <ul class="work-caption tech-list text-center">
+                      <li>React</li>
+                      <li>JavaScript</li>
+                      <li>Ruby on Rails</li>
+                      <li>PostgreSQL</li>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                    </ul>
+                  </figcaption>
+                </figure>
+                <div class="links">
+                  <a href="https://radiant-dusk-45275.herokuapp.com/" class="work-label" target="_blank">
+                    <p class="link">Live</p>
+                  </a>
+                  <a href="https://github.com/mimi26/ramen_adventures" target="_blank" class="work-label">
+                    <p class="link">Github</p>
+                  </a>
+                </div>
+              </div>
+              <div class="work-links top-work col-md-4">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/scheduler.png" alt="screen shot of event scheduler">
                   <figcaption class="work-caption">
