fixed mobile media query

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <title>Mimi Klein</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous"> -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -157,7 +159,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
           <div class="tap">(tap on images below)</div>
           <div class="portfolio-container">
             <div class ="row work-container work-top-row">
-              <div class="work-links top-work col-md-4">
+              <div class="work-links text-center top-work col-md-4">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/simon.png" alt="screen shot of simon game">
                   <figcaption class="work-caption">
@@ -170,7 +172,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                       </ul>
                   </figcaption>
                 </figure>
-                <div class="links">
+                <div class="links text-center">
                   <a href="http://simonreact.bitballoon.com/" class="work-label" target="_blank">
                     <p class="link">Live</p>
                   </a>
@@ -178,7 +180,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
                     <p class="link">Github</p>
                   </a>
                 </div>
-              </div>
+              </div>      
               <div class="work-links top-work col-md-4">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/ramen.png" alt="screen shot of simon game">
@@ -229,7 +231,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
               </div>
             </div>
             <div class="row work-container work-bottom-row">
-              <div class="work-links col-md-6">
+              <div class="work-links  col-md-6">
                 <figure class="cap-bot">
                   <img class="work-img" src="images/techie.png" alt="screen shot of tech.ie app">
                   <figcaption class="work-caption">
