fixed alignment of contact section

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ I'm also a fire performer -- I spin poi and fire fans, and eat fire. I like to k
           </div>
         </a>
 
-        <div id="contact" class="text-center">
+        <div id="contact">
           <h1 class="header">Contact</h1>
             <div class="contact-links">
               <a href="mailto:mimi13klein@gmail.com" class="contact-link" target="_blank">
