--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <link href="https://fonts.googleapis.com/css?family=Marcellus+SC|Alegreya+Sans+SC|Fredericka+the+Great|Quicksand|Mate+SC|Josefin+Sans|Architects+Daughter" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Marcellus+SC|Alegreya+Sans+SC|Fredericka+the+Great|Quicksand|Quicksand:700|Mate+SC|Josefin+Sans|Architects+Daughter" rel="stylesheet">
       <title>Mimi Klein</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
